web/themes/custom/finnishcourses_bootstrap/scss/coursesearch.scss
/* COURSE SEARCH
--------------------------------------------------*/

#block-exposedformsearch-coursespage-1 {
  h2 {
    text-align: center;
    @include media-breakpoint-up(lg) {
      font-size: 40px;
    }
  }
}

.fieldset {
  margin-top: 20px;
}

.fieldset-title {
  @include media-breakpoint-down(sm-t) {
    margin-bottom: 20px;
    .fieldset-legend {
      font-size: 21px;
    }
  }
}


.fieldset-legend {
  font-weight: 900;
  margin-bottom: 5px;
  font-size: 24px;
}

.more-options-wrapper {
  .label {
    font-weight: 900;
  }

  .fieldset-legend {
    font-size: 16px;
  }

  .fieldset {
    margin-top: 1px;
  }
}

#edit-course-town--wrapper {
  .form-check {
    display: inline-block;
    padding-bottom: 9px;
  }

  .js-form-item {
    .form-check-label {
      position: relative;
      top: 2px;
      @include media-breakpoint-down(sm-t) {
        left: -11px;
      }
    }
  }

  .fieldset-wrapper {
    padding-left: 20px;
  }
}

#edit-time-of-day--wrapper {
  display: flex;
  flex: 1;
  @include media-breakpoint-down(sm-t) {
    display: grid;
  }

  .form-check-label {
    @include media-breakpoint-down(sm-t) {
      top: 5px;
    }
  }

  .form-check {
    @include media-breakpoint-down(sm-t) {
      padding-bottom: 16px;
    }
  }
}

.fieldset-wrapper {
  #edit-course-town, .form-item-online-course, #edit-starting-level {
    text-align: center;
  }
}

.form-item-online-course {
  display: inline-block;
}

.more-search-options-trigger {
  cursor: pointer;
  color: $primary-shade;
  font-weight: 900;
  text-align: center;
  margin-top: 55px;
  margin-bottom: 20px;
}

// Style for less search options
.less {
  margin-top: 48px;
}

.more-options-wrapper {
  background: $more-options-shade;
  padding: 10px;
  display: none;
  text-align: left;
  max-height: 200px;
  @include media-breakpoint-down(sm-t) {
    max-height: 620px;
  }

  .col-auto {
    padding-left: 0;
    padding-right: 0;
  }

  .form-check-label {
    padding: 0 20px;
    @include media-breakpoint-down(sm-t) {
      padding: 0 9px;
    }
  }
}

.more-options-row-1, .more-options-row-2 {
  display: flex;

  @include media-breakpoint-down(sm-t) {
    flex-direction: column;
  }

  .fieldset {
    display: flex;
    flex: 1;
    @include media-breakpoint-down(sm-t) {
      flex-direction: column;
      margin-bottom: 10px;
    }


    .fieldset-title, .label {
      color: $text-shade;
      font-weight: 700;
      font-size: 16px;
      flex-basis: 26%;
      @include media-breakpoint-down(sm-t) {
        margin-bottom: 16px;
      }
    }
  }
}

.more-options-row-2, .more-options-row-3 {
  margin-top: 22px;
  @include media-breakpoint-down(sm-t) {
    margin-top: 0;
  }
}

.more-options-dates {
  display: flex;
  flex: 1;
}

#edit-starting-level--wrapper {
  flex: 1;
}

.form-item-starting-level-ext, .form-item-start-date, .form-item-start-date-2,
.form-item-keyword {
  display: flex;
  @include media-breakpoint-down(sm-t) {
    flex-direction: column;
  }
}

.form-item-starting-level-ext, .form-item-start-date-2, .form-item-keyword {
  display: flex;
  flex: 1;
}


.form-item-start-date {
  flex: 2 !important; // Overriding flex: 1 in general for form-item classes
  @include media-breakpoint-down(sm-t) {
    flex: 1 !important;
  }
}

#edit-course-fee {
  flex: 1;
  @include media-breakpoint-down(sm-t) {
    display: grid;
  }

  .form-check {
    @include media-breakpoint-down(sm-t) {
      padding-bottom: 16px;
    }

    .form-check-label {
      padding: 0 12px;
      @include media-breakpoint-down(sm-t) {
        padding: 0 9px;
      }
    }

    .form-checkbox {
      top: -5px;
      left: 14px;
    }
  }
}

#edit-course-fee--wrapper {
  flex: 1;
  display: flex;
  flex-wrap: nowrap;

  .fieldset-wrapper {
    flex-basis: 75%;
  }
}

.form-item-start-date, .form-item-start-date-2 {
  .label {
    flex-basis: 38% !important; // Overriding flex-basis: 26% in general for labels classes
    top: 10px;
    position: relative;
    @include media-breakpoint-down(sm-t) {
      top: 0;
    }
  }

  .form-control {
    width: 140px;
    height: 40px;
    cursor: pointer;
    @include media-breakpoint-down(md-t) {
      width: 130px;
    }
    @include media-breakpoint-down(sm-t) {
      width: 95%;
    }
  }
}

.form-item-start-date-2 {
  @include media-breakpoint-down(sm-t) {
    margin-top: 41px !important; // Overriding other .fieldset classes with margin-top todo: fix this
  }

  .form-control {
    margin-left: auto;
  }
}


.form-item-starting-level-ext {
  margin-top: 4px;

  .label {
    top: 10px;
    position: relative;
    @include media-breakpoint-down(sm-t) {
      top: 0;
    }
  }

  .form-select {
    width: 276px;
    height: 40px;
    @include media-breakpoint-down(sm-t) {
      width: 100%;
    }
  }
}

.form-item-keyword {
  display: flex;
  flex: 6.5;

  .label {
    display: flex;
    flex: 1;
  }

  .form-text, .form-control {
    color: $form-border-shade;
    height: 40px;
    cursor: pointer;
    max-width: 87% !important;
    width: 100% !important;
    @include media-breakpoint-down(sm-t) {
      max-width: 100% !important;
    }
  }
}

// Probably need a more specified class? Style for read more-button
.views-field-nid {
  margin-top: 20px;
  margin-bottom: 20px;
}

.read-more {
  background-color: $primary-shade;
  padding: 7px 5px 7px 14px;
  font-size: 16px;
  font-weight: 700;
  color: $link-color-white;

  &:hover {
    text-decoration: none; //Override
    color: $link-color-white; //Override
  }
}

// Course availability
.not_available {
  .field__item {
    color: $not_available;
  }
}

.available {
  .field__item {
    color: $available;
  }
}

.ask {
  .field__item {
    color: $ask_org;
  }
}

// Search buttons
#views-exposed-form-search-courses-page-1 {
  #edit-submit-fixed.btn-primary, #edit-submit-search-courses.btn-primary {
    background-color: $green-shade;
    border-color: $green-shade;
    font-size: 21px;
    font-weight: 700;
    margin-top: 20px;
    @include media-breakpoint-down(sm) {
      width: 100%;
      padding-top: 10px;
      padding-bottom: 10px;
    }
    @include media-breakpoint-up(sm) {
      width: 290px;
      height: 60px;
      text-align: center;
    }

    &:hover {
      background-color: $green-shade;
      border-color: $green-shade;
    }
  }

  #edit-submit-fixed.btn-primary {
    border-radius: 4px;
  }

  #edit-submit-search-courses.btn-primary {
    border-radius: 0;
    position: fixed;
    z-index: 1000;
    bottom: 0;
    left: 0;
    @include media-breakpoint-up(sm) {
      display: none;
    }
  }
}

// Search button under the search form
#views-exposed-form-search-courses-page-1 {
  #edit-submit-fixed.btn-primary {
    @include media-breakpoint-down(sm-t) {
      width: 91%;
    }
  }
}

